Fix layout on Safari

--- a/frontend/src/assets/scss/bt/catalog/_catalog.scss
+++ b/frontend/src/assets/scss/bt/catalog/_catalog.scss
@@ -6,7 +6,6 @@
 
   // row
   > .row {
-    height: 100%;
     align-items: stretch;
 
     /*@include mobile {
